fix: x overflow
- in settings and new cards view
- hiding horizontal scrollbars in tab and rich text editor toolbar

--- a/src/components/editcard/CardEditor/CardEditor.module.css
+++ b/src/components/editcard/CardEditor/CardEditor.module.css
@@ -30,7 +30,12 @@
   gap: var(--mantine-spacing-sm);
   padding: var(--mantine-spacing-sm) 0;
   width: 100%;
-  overflow: scroll;
+  
+  overflow-x: scroll;
+  scrollbar-width: 0; /* Firefox */
+  &::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+  }
 
   & :global(.mantine-RichTextEditor-controlsGroup) {
     border: 1px solid var(--mantine-color-default-border);
